--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
 body{
     background-color: #F9F3EE;
 }
-.navbar{
+body,html{
+    height: 100%;
+    width: 100%;
+}
+nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -110,21 +114,25 @@ input[type=checkbox]{
     color: black;
     font-weight: bolder;
 }
-.footer{
+footer{
     background-color: #242424;
+    width: 100%;
     height: 200px;
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     padding: 30px 0;
     gap: 2em;
+    position: absolute;
+    bottom: 0;
+    
     
 }
-.footer li{
+footer li{
     list-style: none;
     margin-top: 10px;    
 }
-.footer li a{
+footer li a{
     text-decoration: none;
     color: white;
 }
