--- a/style.css
+++ b/style.css
@@ -112,25 +112,19 @@ input[type=checkbox]{
 }
 .footer{
     background-color: #242424;
-    height: 230px;
+    height: 200px;
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
-    padding: 20px 28px;
-    background-color:grey;
+    padding: 30px 0;
     gap: 2em;
     
 }
 .footer li{
     list-style: none;
-    margin-top: 10px;  
-    font-size:1.2em; 
+    margin-top: 10px;    
 }
 .footer li a{
     text-decoration: none;
     color: white;
-    font-family:consolas;
-}
-#b,#c,#a{
-color: whitesmoke;
 }
