--- a/style.css
+++ b/style.css
@@ -1,203 +1,267 @@
-*{
-    padding: 0;
-    margin: 0;
+@import url('https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&display=swap');
+
+body {
+    background-color: #ffffff;
+}
+
+.navbar {
+    box-shadow: 0px 14px 40px rgba(180, 177, 202, 0.3);
 
 }
-body{
-    background-color: #F9F3EE;
+
+.navBtns{
+
+    font-family: 'Satoshi';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #FF765E;
+
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color:#000000;
-    color: #6D8B74;
-    
+
+.dark {
+    font-family: 'Satoshi';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #222526;
 }
-hr
-{
-    height:1px;
+.contact{
+font-family: 'Satoshi';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+text-transform: uppercase;
+color: #FFFFFF;
+padding: 15px 28px;
+background: linear-gradient(90deg, #2FAAFA 0%, #1F8BF4 100%);
+border-radius: 14px;
+filter: drop-shadow(0px 14px 40px rgba(31, 138, 244, 0.29));
+}
+
+.contact:hover{
+    filter: drop-shadow(0px 20px 42px rgba(31, 138, 244, 0.492));
+}
+
+.Top-Heading{
+
+    font-family: 'Satoshi';
+font-style: normal;
+font-weight: 900;
+font-size: 42px;
+line-height: 57px;
+text-align: center;
+
+color: #FF765E;
+}
+
+/* hr {
+    height: 1px;
     width: 5%;
     border-style: none;
-    border-color:rgb(181, 181, 181);
-    border-top-style: dotted; 
+    border-color: rgb(181, 181, 181);
+    border-top-style: dotted;
     border-top-width: 7px;
 }
-.menu{
+
+.menu {
     display: flex;
     gap: 1em;
     background-color: #000000;
 }
-.menu a{
-    font-family:Arial, Helvetica, sans-serif;
+
+.menu a {
+    font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
     background-color: #000000;
     text-decoration: none;
     border-right: 2px solid white;
-    padding-right:25px;
+    padding-right: 25px;
 }
-.logo{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    color : #ffffff;
-    background-color: #000000;
-    border-right: 2px solid white;
-    padding-right:40px;
-}
-.menu li a:hover{
+
+
+
+.menu li a:hover {
     background-color: #ffffff;
-    color:#000000;
+    color: #000000;
     padding: 10px;
     border-radius: 5px;
-    font-weight : bold;
+    font-weight: bold;
 }
-.menu li{
+
+.menu li {
     list-style: none;
 }
-.top{
-    color:rgb(190, 14, 14);
+
+.top {
+    color: rgb(190, 14, 14);
 }
-.img{
-    height:40%;
+
+.img {
+    height: 40%;
 }
-.read{
-    color:rgb(190, 14, 14);
+
+.read {
+    color: rgb(190, 14, 14);
 }
-input[type=checkbox]{
+
+input[type=checkbox] {
     display: none;
-   } 
-   /*HAMBURGER MENU*/
-   .hamburger {
+}
+
+/*HAMBURGER MENU*/
+.hamburger {
     display: none;
     font-size: 24px;
     user-select: none;
-   }
+}
 
-   @media (max-width: 768px) {
-    .menu { 
-     display:none;
-     position: absolute;
-     background-color:#000000;
-     right: 0;
-     left: 0;
-     text-align: center;
-     padding: 16px 0;
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        position: absolute;
+        background-color: #000000;
+        right: 0;
+        left: 0;
+        text-align: center;
+        padding: 16px 0;
     }
+
     .menu li:hover {
-     display: inline-block;
-     background-color:#000000;
-     transition: 0.3s ease;
+        display: inline-block;
+        background-color: #000000;
+        transition: 0.3s ease;
     }
-    .menu li + li {
-     margin-top: 12px;
+
+    .menu li+li {
+        margin-top: 12px;
     }
-    input[type=checkbox]:checked ~ .menu{
-     display: block;
+
+    input[type=checkbox]:checked~.menu {
+        display: block;
     }
+
     .hamburger {
-     display: block;
+        display: block;
     }
+
     .dropdown {
-     left: 50%;
-     top: 30px;
-     transform: translateX(35%);
+        left: 50%;
+        top: 30px;
+        transform: translateX(35%);
     }
+
     .dropdown li:hover {
-     background-color: #000000;
+        background-color: #000000;
     }
-    .menu a{
-        border:none;
+
+    .menu a {
+        border: none;
         background-color: #000000;
         color: rgb(255, 255, 255);
     }
-    .img img{
-    width: 100%;
-    
+
+    .img img {
+        width: 100%;
+
+    }
+} */
+
+.news-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-    }
-    .news-section{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    .news-section1{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-.img img{
-    width: 100%;
-    height:90vh;
+
+.news-section1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-#world_news{
+
+.img img {
+    width: 100%;
+    height: 90vh;
+}
+
+#world_news {
     display: flex;
     flex-direction: column;
     gap: 2em;
 }
-.world_news p{
+
+.world_news p {
     font-size: 20px;
     color: black;
     font-weight: bolder;
 }
 
-.news-heading1{
+.news-heading1 {
     font-size: 30px;
     font-weight: bolder;
     background-color: antiquewhite;
     padding: 20px;
 }
 
-#news{
+#news {
     display: flex;
     flex-direction: column;
     gap: 2em;
-    margin-left:25%;
-    margin-right:25%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
-.news p{
+
+.news p {
     font-size: 20px;
     color: black;
     font-weight: bolder;
 }
-.footer{
+
+.footer {
     background-color: #242424;
     height: 230px;
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     padding: 20px 28px;
-    background-color:grey;
+    background-color: grey;
     gap: 2em;
-    
-}
-.footer li{
-    list-style: none;
-    margin-top: 10px;  
-    font-size:1.2em; 
-}
-.footer li a{
-    text-decoration: none;
-    color: white;
-    font-family:consolas;
-}
-#b,#c,#a{
-color: whitesmoke;
+
 }
 
-.footer-content{
-    display: flex; 
-    justify-content: center; 
-   margin: auto; 
-   position: fixed;
-   bottom: 0;
-   display: block;
+.footer li {
+    list-style: none;
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+.footer li a {
+    text-decoration: none;
+    color: white;
+    font-family: consolas;
+}
+
+#b,
+#c,
+#a {
+    color: whitesmoke;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    position: fixed;
+    bottom: 0;
+    display: block;
     font-size: 20px;
     font-weight: bold;
     align-items: center;
     justify-items: baseline;
     margin: auto;
-   margin: 0; 
-   }
+    margin: 0;
+}
