Social Icons added to the footer (#22)
* Social Icons added to the footer

* Update style.css

* Added social icons

* Rename style.css to index.html

--- a/style.css
+++ b/style.css
@@ -201,3 +201,27 @@ color: whitesmoke;
     margin: auto;
    margin: 0; 
    }
+
+  .socials{
+    text-align: center;
+    color:rgb(25, 23, 23);
+    padding-bottom: 20px;
+    padding-top: 20px;
+   }
+
+   .socials a{
+    color:inherit;
+    border:1px solid black;
+    font-size: 25px;
+    height:35px;
+    width:37px;
+    display: inline-block;
+    text-align:center;
+    border-radius: 50%;
+    padding-top:6px;
+   }
+
+   .socials a:hover{
+    cursor:pointer; border:rgb(25, 23, 23);
+    opacity:0.9;
+   }
