--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ input[type=checkbox] {
     display: flex;
     justify-content: center;
     margin: auto;
-    position: fixed;
+
     bottom: 0;
     display: block;
     font-size: 20px;
@@ -356,3 +356,74 @@ input[type=checkbox] {
     background-color: black;
     color: white;
   }
+
+
+  /*for toggle btn  */
+
+
+
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    margin-top: 2px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 4px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color:rgb(87, 80, 80);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px rgb(49, 48, 48);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(18px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  
