Added error message when api fetch fails

--- a/style.css
+++ b/style.css
@@ -528,3 +528,13 @@ input[type=checkbox] {
   font-family: 'Playfair Display', serif;
   font-size: 1.25rem;   
 }
+
+/* News loading error text styles */
+.error-container {
+  max-width: 80vw;
+  padding: 2rem;
+  margin: 3rem 5rem 5rem 5rem;
+  border-radius: 10px;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
